.k8s/ratelimit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ratelimit
  name: ratelimit
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratelimit
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ratelimit
    spec:
      containers:
        - args:
            - /bin/ratelimit
          env:
            - name: LOG_LEVEL
              value: debug
            - name: REDIS_SOCKET_TYPE
              value: tcp
            - name: REDIS_URL
              value: redis:6379
            - name: RUNTIME_ROOT
              value: /data 
            - name: RUNTIME_SUBDIRECTORY
              value: ratelimit
            - name: RUNTIME_WATCH_ROOT
              value: "false"
            - name: STATSD_HOST
              value: statsd
            - name: STATSD_PORT
              value: "9125"
            - name: USE_STATSD
              value: "true"
          image: envoyproxy/ratelimit:master
          name: ratelimit
          ports:
            - containerPort: 8080
            - containerPort: 8081
            - containerPort: 6070
          volumeMounts:
            - mountPath: /data/ratelimit/config/example.yaml
              name: ratelimit-conf
              subPath: example.yaml
      volumes:
        - name: ratelimit-conf
          configMap:
            name: ratelimit-conf
            
---
apiVersion: v1
kind: Service
metadata:
  name: ratelimit
  namespace: default
spec:
  selector:
    app: ratelimit 
  ports:
    - name: service
      protocol: TCP
      port: 8080 
      targetPort: 8080
    - name: service2
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: service3
      protocol: TCP
      port: 6070
      targetPort: 6070
---
apiVersion: v1
data:
  #config.yaml: |
  #  domain: mongo_cps
  #  descriptors:
  #    - key: database
  #      value: users
  #      rate_limit:
  #        unit: second
  #        requests_per_unit: 500

  #    - key: database
  #      value: default
  #      rate_limit:
  #        unit: second
  #        requests_per_unit: 500
  example.yaml: |
    domain: rl
    descriptors:
      - key: source_cluster
        value: ratelimit
        descriptors:
          - key: destination_cluster
            value: mock
            rate_limit:
              unit: minute
              requests_per_unit: 1
      - key: foo
        rate_limit:
          unit: minute
          requests_per_unit: 2
        descriptors:
          - key: bar
            rate_limit:
              unit: minute
              requests_per_unit: 3
          - key: bar
            value: banned
            rate_limit:
              unit: minute
              requests_per_unit: 0
          - key: baz
            rate_limit:
              unit: second
              requests_per_unit: 1
kind: ConfigMap
metadata:
  name: ratelimit-conf
  namespace: default
