.k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis 
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis 
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redis 
    spec:
      containers:
        - name: redis
          image: redis:alpine
          ports:
            - name: redis  
              containerPort: 6379 
              protocol: TCP
    
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: default
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
